// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`branded email templates buildInviteEmail escapes markup in every caller-supplied field: html 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>You are invited to collaborate</title>
  </head>
  <body style="margin:0;padding:0;background-color:#ffffff;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Arial,sans-serif;">
    <div style="display:none;max-height:0;overflow:hidden;opacity:0;color:transparent;">&lt;script&gt;alert(1)&lt;/script&gt; invited you to join &lt;img src=x onerror=alert(2)&gt; on Proyekto.</div>
    <table width="100%" cellpadding="0" cellspacing="0" role="presentation" style="background-color:#ffffff;padding:32px 16px;">
      <tr>
        <td align="center">
          <table width="560" cellpadding="0" cellspacing="0" role="presentation" style="width:560px;max-width:560px;">
            <tr>
              <td align="center" style="padding:0 0 26px;">
                <span style="color:#2563eb;font-size:22px;font-weight:700;letter-spacing:.01em;">Proyekto</span>
              </td>
            </tr>
            <tr>
              <td align="center" style="padding:0 0 26px;">
                <h1 style="margin:0;color:#0f172a;font-size:26px;line-height:1.3;font-weight:700;">You are invited to collaborate</h1>
              </td>
            </tr>
            <tr>
              <td style="padding:0 0 28px;">
            <p style="margin:0 0 16px;color:#334155;font-size:15px;line-height:1.6;"><strong>&lt;script&gt;alert(1)&lt;/script&gt;</strong> invited you to collaborate on <strong>&lt;img src=x onerror=alert(2)&gt;</strong> in Proyekto.</p>
            <table cellpadding="0" cellspacing="0" role="presentation" style="margin:0 0 16px;">
              <tr>
                <td style="padding:4px 16px 4px 0;color:#64748b;font-size:15px;line-height:1.6;">Project</td>
                <td style="padding:4px 0;color:#0f172a;font-size:15px;line-height:1.6;font-weight:600;">&lt;img src=x onerror=alert(2)&gt;</td>
              </tr>
              <tr>
                <td style="padding:4px 16px 4px 0;color:#64748b;font-size:15px;line-height:1.6;">Role</td>
                <td style="padding:4px 0;color:#0f172a;font-size:15px;line-height:1.6;font-weight:600;">&quot;&gt;&lt;b&gt;bold&lt;/b&gt;</td>
              </tr>
            </table>
            <p style="margin:0 0 16px;padding:0 0 0 16px;border-left:3px solid #e2e8f0;color:#334155;font-size:15px;line-height:1.6;white-space:pre-wrap;">&lt;iframe src=&quot;evil&quot;&gt;&lt;/iframe&gt;</p>
            <p style="margin:0 0 16px;color:#334155;font-size:15px;line-height:1.6;">If you do not have an account yet, sign up with this email address and your invitation will be waiting for you.</p>
            <div style="margin:28px 0 0;">
              <a href="https://app.proyekto.test/invites?inviteId=6f1b2c3d-4e5f-4a6b-8c9d-0e1f2a3b4c5d" style="display:inline-block;padding:12px 20px;background-color:#2563eb;color:#ffffff;font-size:15px;font-weight:600;text-decoration:none;border-radius:3px;">Open invitation</a>
            </div>
              </td>
            </tr>
            <tr>
              <td style="padding:20px 0 0;border-top:1px solid #e2e8f0;">
                <p style="margin:0;color:#64748b;font-size:13px;line-height:1.6;">You received this email because someone invited you to a project on Proyekto.</p>
              </td>
            </tr>
          </table>
        </td>
      </tr>
    </table>
  </body>
</html>"
`;

exports[`branded email templates buildInviteEmail renders a full invitation: html 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>You are invited to collaborate</title>
  </head>
  <body style="margin:0;padding:0;background-color:#ffffff;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Arial,sans-serif;">
    <div style="display:none;max-height:0;overflow:hidden;opacity:0;color:transparent;">Ada Lovelace invited you to join Analytical Engine on Proyekto.</div>
    <table width="100%" cellpadding="0" cellspacing="0" role="presentation" style="background-color:#ffffff;padding:32px 16px;">
      <tr>
        <td align="center">
          <table width="560" cellpadding="0" cellspacing="0" role="presentation" style="width:560px;max-width:560px;">
            <tr>
              <td align="center" style="padding:0 0 26px;">
                <span style="color:#2563eb;font-size:22px;font-weight:700;letter-spacing:.01em;">Proyekto</span>
              </td>
            </tr>
            <tr>
              <td align="center" style="padding:0 0 26px;">
                <h1 style="margin:0;color:#0f172a;font-size:26px;line-height:1.3;font-weight:700;">You are invited to collaborate</h1>
              </td>
            </tr>
            <tr>
              <td style="padding:0 0 28px;">
            <p style="margin:0 0 16px;color:#334155;font-size:15px;line-height:1.6;"><strong>Ada Lovelace</strong> invited you to collaborate on <strong>Analytical Engine</strong> in Proyekto.</p>
            <table cellpadding="0" cellspacing="0" role="presentation" style="margin:0 0 16px;">
              <tr>
                <td style="padding:4px 16px 4px 0;color:#64748b;font-size:15px;line-height:1.6;">Project</td>
                <td style="padding:4px 0;color:#0f172a;font-size:15px;line-height:1.6;font-weight:600;">Analytical Engine</td>
              </tr>
              <tr>
                <td style="padding:4px 16px 4px 0;color:#64748b;font-size:15px;line-height:1.6;">Role</td>
                <td style="padding:4px 0;color:#0f172a;font-size:15px;line-height:1.6;font-weight:600;">Lead Engineer</td>
              </tr>
            </table>
            <p style="margin:0 0 16px;padding:0 0 0 16px;border-left:3px solid #e2e8f0;color:#334155;font-size:15px;line-height:1.6;white-space:pre-wrap;">Would love your help on the punch-card pipeline.</p>
            <p style="margin:0 0 16px;color:#334155;font-size:15px;line-height:1.6;">If you do not have an account yet, sign up with this email address and your invitation will be waiting for you.</p>
            <div style="margin:28px 0 0;">
              <a href="https://app.proyekto.test/invites?inviteId=6f1b2c3d-4e5f-4a6b-8c9d-0e1f2a3b4c5d" style="display:inline-block;padding:12px 20px;background-color:#2563eb;color:#ffffff;font-size:15px;font-weight:600;text-decoration:none;border-radius:3px;">Open invitation</a>
            </div>
              </td>
            </tr>
            <tr>
              <td style="padding:20px 0 0;border-top:1px solid #e2e8f0;">
                <p style="margin:0;color:#64748b;font-size:13px;line-height:1.6;">You received this email because someone invited you to a project on Proyekto.</p>
              </td>
            </tr>
          </table>
        </td>
      </tr>
    </table>
  </body>
</html>"
`;

exports[`branded email templates buildInviteEmail renders a full invitation: subject 1`] = `"Ada Lovelace invited you to collaborate on Analytical Engine"`;

exports[`branded email templates buildInviteEmail renders a full invitation: text 1`] = `
"Ada Lovelace invited you to collaborate on Analytical Engine in Proyekto.

Project: Analytical Engine
Role: Lead Engineer

"Would love your help on the punch-card pipeline."

If you do not have an account yet, sign up with this email address and your invitation will be waiting for you.

Open your invitation: https://app.proyekto.test/invites?inviteId=6f1b2c3d-4e5f-4a6b-8c9d-0e1f2a3b4c5d

You received this email because someone invited you to a project on Proyekto."
`;

exports[`branded email templates buildInviteEmail renders a minimal invitation (no position, message or avatar): html 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>You are invited to collaborate</title>
  </head>
  <body style="margin:0;padding:0;background-color:#ffffff;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Arial,sans-serif;">
    <div style="display:none;max-height:0;overflow:hidden;opacity:0;color:transparent;">Ada Lovelace invited you to join Analytical Engine on Proyekto.</div>
    <table width="100%" cellpadding="0" cellspacing="0" role="presentation" style="background-color:#ffffff;padding:32px 16px;">
      <tr>
        <td align="center">
          <table width="560" cellpadding="0" cellspacing="0" role="presentation" style="width:560px;max-width:560px;">
            <tr>
              <td align="center" style="padding:0 0 26px;">
                <span style="color:#2563eb;font-size:22px;font-weight:700;letter-spacing:.01em;">Proyekto</span>
              </td>
            </tr>
            <tr>
              <td align="center" style="padding:0 0 26px;">
                <h1 style="margin:0;color:#0f172a;font-size:26px;line-height:1.3;font-weight:700;">You are invited to collaborate</h1>
              </td>
            </tr>
            <tr>
              <td style="padding:0 0 28px;">
            <p style="margin:0 0 16px;color:#334155;font-size:15px;line-height:1.6;"><strong>Ada Lovelace</strong> invited you to collaborate on <strong>Analytical Engine</strong> in Proyekto.</p>
            <table cellpadding="0" cellspacing="0" role="presentation" style="margin:0 0 16px;">
              <tr>
                <td style="padding:4px 16px 4px 0;color:#64748b;font-size:15px;line-height:1.6;">Project</td>
                <td style="padding:4px 0;color:#0f172a;font-size:15px;line-height:1.6;font-weight:600;">Analytical Engine</td>
              </tr>
            </table>
            <p style="margin:0 0 16px;color:#334155;font-size:15px;line-height:1.6;">If you do not have an account yet, sign up with this email address and your invitation will be waiting for you.</p>
            <div style="margin:28px 0 0;">
              <a href="https://app.proyekto.test/invites?inviteId=6f1b2c3d-4e5f-4a6b-8c9d-0e1f2a3b4c5d" style="display:inline-block;padding:12px 20px;background-color:#2563eb;color:#ffffff;font-size:15px;font-weight:600;text-decoration:none;border-radius:3px;">Open invitation</a>
            </div>
              </td>
            </tr>
            <tr>
              <td style="padding:20px 0 0;border-top:1px solid #e2e8f0;">
                <p style="margin:0;color:#64748b;font-size:13px;line-height:1.6;">You received this email because someone invited you to a project on Proyekto.</p>
              </td>
            </tr>
          </table>
        </td>
      </tr>
    </table>
  </body>
</html>"
`;

exports[`branded email templates buildInviteEmail renders a minimal invitation (no position, message or avatar): subject 1`] = `"Ada Lovelace invited you to collaborate on Analytical Engine"`;

exports[`branded email templates buildInviteEmail renders a minimal invitation (no position, message or avatar): text 1`] = `
"Ada Lovelace invited you to collaborate on Analytical Engine in Proyekto.

Project: Analytical Engine

If you do not have an account yet, sign up with this email address and your invitation will be waiting for you.

Open your invitation: https://app.proyekto.test/invites?inviteId=6f1b2c3d-4e5f-4a6b-8c9d-0e1f2a3b4c5d

You received this email because someone invited you to a project on Proyekto."
`;

exports[`branded email templates buildInvoiceEmailHtml escapes markup in the provider name 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Invoice INV-2026-0001</title>
  </head>
  <body style="margin:0;padding:0;background-color:#ffffff;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Arial,sans-serif;">
    <div style="display:none;max-height:0;overflow:hidden;opacity:0;color:transparent;">Invoice INV-2026-0001 for USD 4,200.50, due September 1, 2026</div>
    <table width="100%" cellpadding="0" cellspacing="0" role="presentation" style="background-color:#ffffff;padding:32px 16px;">
      <tr>
        <td align="center">
          <table width="560" cellpadding="0" cellspacing="0" role="presentation" style="width:560px;max-width:560px;">
            <tr>
              <td align="center" style="padding:0 0 26px;">
                <span style="color:#2563eb;font-size:22px;font-weight:700;letter-spacing:.01em;">Proyekto</span>
              </td>
            </tr>
            <tr>
              <td align="center" style="padding:0 0 26px;">
                <h1 style="margin:0;color:#0f172a;font-size:26px;line-height:1.3;font-weight:700;">Invoice INV-2026-0001</h1>
              </td>
            </tr>
            <tr>
              <td style="padding:0 0 28px;">
            <p style="margin:0 0 16px;color:#334155;font-size:15px;line-height:1.6;"><strong>&lt;script&gt;alert(1)&lt;/script&gt;</strong> has issued you an invoice.</p>
            <table cellpadding="0" cellspacing="0" role="presentation" style="margin:0 0 16px;">
              <tr>
                <td style="padding:4px 16px 4px 0;color:#64748b;font-size:15px;line-height:1.6;">Amount due</td>
                <td style="padding:4px 0;color:#0f172a;font-size:15px;line-height:1.6;font-weight:600;">USD 4,200.50</td>
              </tr>
              <tr>
                <td style="padding:4px 16px 4px 0;color:#64748b;font-size:15px;line-height:1.6;">Due date</td>
                <td style="padding:4px 0;color:#0f172a;font-size:15px;line-height:1.6;font-weight:600;">September 1, 2026</td>
              </tr>
              <tr>
                <td style="padding:4px 16px 4px 0;color:#64748b;font-size:15px;line-height:1.6;">Period covered</td>
                <td style="padding:4px 0;color:#0f172a;font-size:15px;line-height:1.6;font-weight:600;">August 1, 2026 – August 31, 2026</td>
              </tr>
            </table>
            <p style="margin:0 0 16px;color:#334155;font-size:15px;line-height:1.6;">Ask your service provider for a copy of the full invoice.</p>
              </td>
            </tr>
            <tr>
              <td style="padding:20px 0 0;border-top:1px solid #e2e8f0;">
                <p style="margin:0;color:#64748b;font-size:13px;line-height:1.6;">You received this email because an invoice was issued to you on Proyekto.</p>
              </td>
            </tr>
          </table>
        </td>
      </tr>
    </table>
  </body>
</html>"
`;

exports[`branded email templates buildInvoiceEmailHtml renders with an attachment 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Invoice INV-2026-0001</title>
  </head>
  <body style="margin:0;padding:0;background-color:#ffffff;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Arial,sans-serif;">
    <div style="display:none;max-height:0;overflow:hidden;opacity:0;color:transparent;">Invoice INV-2026-0001 for USD 4,200.50, due September 1, 2026</div>
    <table width="100%" cellpadding="0" cellspacing="0" role="presentation" style="background-color:#ffffff;padding:32px 16px;">
      <tr>
        <td align="center">
          <table width="560" cellpadding="0" cellspacing="0" role="presentation" style="width:560px;max-width:560px;">
            <tr>
              <td align="center" style="padding:0 0 26px;">
                <span style="color:#2563eb;font-size:22px;font-weight:700;letter-spacing:.01em;">Proyekto</span>
              </td>
            </tr>
            <tr>
              <td align="center" style="padding:0 0 26px;">
                <h1 style="margin:0;color:#0f172a;font-size:26px;line-height:1.3;font-weight:700;">Invoice INV-2026-0001</h1>
              </td>
            </tr>
            <tr>
              <td style="padding:0 0 28px;">
            <p style="margin:0 0 16px;color:#334155;font-size:15px;line-height:1.6;"><strong>Acme Studio</strong> has issued you an invoice.</p>
            <table cellpadding="0" cellspacing="0" role="presentation" style="margin:0 0 16px;">
              <tr>
                <td style="padding:4px 16px 4px 0;color:#64748b;font-size:15px;line-height:1.6;">Amount due</td>
                <td style="padding:4px 0;color:#0f172a;font-size:15px;line-height:1.6;font-weight:600;">USD 4,200.50</td>
              </tr>
              <tr>
                <td style="padding:4px 16px 4px 0;color:#64748b;font-size:15px;line-height:1.6;">Due date</td>
                <td style="padding:4px 0;color:#0f172a;font-size:15px;line-height:1.6;font-weight:600;">September 1, 2026</td>
              </tr>
              <tr>
                <td style="padding:4px 16px 4px 0;color:#64748b;font-size:15px;line-height:1.6;">Period covered</td>
                <td style="padding:4px 0;color:#0f172a;font-size:15px;line-height:1.6;font-weight:600;">August 1, 2026 – August 31, 2026</td>
              </tr>
            </table>
            <p style="margin:0 0 16px;color:#334155;font-size:15px;line-height:1.6;">The full invoice is attached to this email as a PDF.</p>
              </td>
            </tr>
            <tr>
              <td style="padding:20px 0 0;border-top:1px solid #e2e8f0;">
                <p style="margin:0;color:#64748b;font-size:13px;line-height:1.6;">You received this email because an invoice was issued to you on Proyekto.</p>
              </td>
            </tr>
          </table>
        </td>
      </tr>
    </table>
  </body>
</html>"
`;

exports[`branded email templates buildInvoiceEmailHtml renders with no due date or period 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Invoice INV-2026-0001</title>
  </head>
  <body style="margin:0;padding:0;background-color:#ffffff;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Arial,sans-serif;">
    <div style="display:none;max-height:0;overflow:hidden;opacity:0;color:transparent;">Invoice INV-2026-0001 for USD 4,200.50</div>
    <table width="100%" cellpadding="0" cellspacing="0" role="presentation" style="background-color:#ffffff;padding:32px 16px;">
      <tr>
        <td align="center">
          <table width="560" cellpadding="0" cellspacing="0" role="presentation" style="width:560px;max-width:560px;">
            <tr>
              <td align="center" style="padding:0 0 26px;">
                <span style="color:#2563eb;font-size:22px;font-weight:700;letter-spacing:.01em;">Proyekto</span>
              </td>
            </tr>
            <tr>
              <td align="center" style="padding:0 0 26px;">
                <h1 style="margin:0;color:#0f172a;font-size:26px;line-height:1.3;font-weight:700;">Invoice INV-2026-0001</h1>
              </td>
            </tr>
            <tr>
              <td style="padding:0 0 28px;">
            <p style="margin:0 0 16px;color:#334155;font-size:15px;line-height:1.6;"><strong>Acme Studio</strong> has issued you an invoice.</p>
            <table cellpadding="0" cellspacing="0" role="presentation" style="margin:0 0 16px;">
              <tr>
                <td style="padding:4px 16px 4px 0;color:#64748b;font-size:15px;line-height:1.6;">Amount due</td>
                <td style="padding:4px 0;color:#0f172a;font-size:15px;line-height:1.6;font-weight:600;">USD 4,200.50</td>
              </tr>
            </table>
            <p style="margin:0 0 16px;color:#334155;font-size:15px;line-height:1.6;">Ask your service provider for a copy of the full invoice.</p>
              </td>
            </tr>
            <tr>
              <td style="padding:20px 0 0;border-top:1px solid #e2e8f0;">
                <p style="margin:0;color:#64748b;font-size:13px;line-height:1.6;">You received this email because an invoice was issued to you on Proyekto.</p>
              </td>
            </tr>
          </table>
        </td>
      </tr>
    </table>
  </body>
</html>"
`;

exports[`branded email templates buildInvoiceEmailHtml renders without an attachment 1`] = `
"<!DOCTYPE html>
<html>
  <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Invoice INV-2026-0001</title>
  </head>
  <body style="margin:0;padding:0;background-color:#ffffff;font-family:-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Arial,sans-serif;">
    <div style="display:none;max-height:0;overflow:hidden;opacity:0;color:transparent;">Invoice INV-2026-0001 for USD 4,200.50, due September 1, 2026</div>
    <table width="100%" cellpadding="0" cellspacing="0" role="presentation" style="background-color:#ffffff;padding:32px 16px;">
      <tr>
        <td align="center">
          <table width="560" cellpadding="0" cellspacing="0" role="presentation" style="width:560px;max-width:560px;">
            <tr>
              <td align="center" style="padding:0 0 26px;">
                <span style="color:#2563eb;font-size:22px;font-weight:700;letter-spacing:.01em;">Proyekto</span>
              </td>
            </tr>
            <tr>
              <td align="center" style="padding:0 0 26px;">
                <h1 style="margin:0;color:#0f172a;font-size:26px;line-height:1.3;font-weight:700;">Invoice INV-2026-0001</h1>
              </td>
            </tr>
            <tr>
              <td style="padding:0 0 28px;">
            <p style="margin:0 0 16px;color:#334155;font-size:15px;line-height:1.6;"><strong>Acme Studio</strong> has issued you an invoice.</p>
            <table cellpadding="0" cellspacing="0" role="presentation" style="margin:0 0 16px;">
              <tr>
                <td style="padding:4px 16px 4px 0;color:#64748b;font-size:15px;line-height:1.6;">Amount due</td>
                <td style="padding:4px 0;color:#0f172a;font-size:15px;line-height:1.6;font-weight:600;">USD 4,200.50</td>
              </tr>
              <tr>
                <td style="padding:4px 16px 4px 0;color:#64748b;font-size:15px;line-height:1.6;">Due date</td>
                <td style="padding:4px 0;color:#0f172a;font-size:15px;line-height:1.6;font-weight:600;">September 1, 2026</td>
              </tr>
              <tr>
                <td style="padding:4px 16px 4px 0;color:#64748b;font-size:15px;line-height:1.6;">Period covered</td>
                <td style="padding:4px 0;color:#0f172a;font-size:15px;line-height:1.6;font-weight:600;">August 1, 2026 – August 31, 2026</td>
              </tr>
            </table>
            <p style="margin:0 0 16px;color:#334155;font-size:15px;line-height:1.6;">Ask your service provider for a copy of the full invoice.</p>
              </td>
            </tr>
            <tr>
              <td style="padding:20px 0 0;border-top:1px solid #e2e8f0;">
                <p style="margin:0;color:#64748b;font-size:13px;line-height:1.6;">You received this email because an invoice was issued to you on Proyekto.</p>
              </td>
            </tr>
          </table>
        </td>
      </tr>
    </table>
  </body>
</html>"
`;
